# deloxide

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  justfile  result1  test-parser.js  test.json
c_tests/: condvar_cycle_deadlock.c  condvar_producer_consumer_deadlock.c  condvar_spurious_wakeup.c  dining_philosophers_deadlock.c  mixed_rwlock_mutex_condvar_deadlock.c  mixed_three_thread_deadlock.c  random_ring_deadlock.c  rwlock_multiple_readers_no_deadlock.c  rwlock_upgrade_deadlock.c  rwlock_writer_waits_for_readers_no_deadlock.c  test_util.h  three_thread_rwlock_deadlock.c  two_thread_deadlock.c
deloxide-tests/: Cargo.toml
deloxide-tests/benches/: hierarchical_locking.rs  producer_consumer.rs  reader_writer.rs  single_mutex.rs
deloxide-tests/scripts/: generate_report.py
deloxide-tests/src/: lib.rs
deloxide-tests/tests/: dining_philosophers.rs  no_deadlock.rs  ping_pong_deadlock.rs
frontend/: deadlock_visual.html  index.html
frontend/css/: style.css
frontend/data/: deadlock_scenario1.json  deadlock_scenario2.json  deadlock_scenario3.json  deadlock_scenario4.json  example.json  scenarios.json
frontend/js/: app.js  utils.js
include/: deloxide.h
src/: lib.rs  main.rs
src/core/: detector.rs  graph.rs  graph_logger.rs  logger.rs  mod.rs  mutex.rs  rwlock.rs  stress.rs  thread.rs  tracked_mutex.rs  tracked_thread.rs  types.rs  utils.rs
src/core/detector/: condvar.rs  deadlock_handling.rs  mod.rs  mutex.rs  rwlock.rs  stress.rs  thread.rs  utils.rs
src/core/graph/: lock_order_graph.rs  mod.rs  wait_for_graph.rs
src/core/locks/: condvar.rs  mod.rs  mutex.rs  rwlock.rs
src/core/logger/: event_logger.rs  graph_logger.rs  mod.rs
src/ffi/: condvar.rs  core.rs  mod.rs  mutex.rs  rwlock.rs  showcase.rs  stress.rs  thread.rs
src/showcase/: encoder.rs  mod.rs
tests/: circular_deadlock.rs  compression_benchmark.rs  condvar_cycle_deadlock.rs  condvar_producer_consumer_deadlock.rs  condvar_spurious_wakeup.rs  deadlock_scenario.rs  deadlock_scenario_2.rs  deadlock_scenario_3.rs  deadlock_with_completing_thread.rs  dining_philosophers.rs  five_lock_cycle.rs  mixed_rwlock_mutex_condvar_deadlock.rs  mixed_three_thread_deadlock.rs  mutex_rwlock_deadlock.rs  partial_deadlock_with_completing_threads.rs  random_ring_deadlock.rs  rwlock_deadlock_cycle.rs  rwlock_multiple_readers_no_deadlock.rs  rwlock_upgrade_deadlock.rs  rwlock_writer_waits_for_readers_no_deadlock.rs  simple_two_thread_deadlock.rs  three_level_thread_deadlock.rs
tests/common/: mod.rs
