[package]
name = "deloxide"
version = "0.2.0-pre"
authors = ["Emirhan Tala <tala.emirhan@gmail.com>", "Ulaş Can Demirbağ <ulascandemirbag@gmail.com>"]
edition = "2024"
description = "Deloxide scrubs your threads clean by detecting deadlocks in real time—keeping your system smooth, safe, and corrosion-free. 🦀🧼🔒"
license-file = "LICENSE"
repository = "https://github.com/Emivvvvv/deloxide"
documentation = "https://docs.rs/deloxide"
keywords = ["deadlock", "concurrency", "debug", "visualization"]
categories = ["development-tools", "concurrency", "development-tools::debugging", "development-tools::ffi"]
readme = "README.md"

[lib]
name = "deloxide"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "deloxide"
path = "src/main.rs"

[features]
default = []
stress-test = [] # for stress testing functionality

[dependencies]
parking_lot = "0.12.1"  # Alternative to std mutex with better performance
fxhash = "0.2.1" # Faster alternative for HashMap and HashSet
chrono = "0.4"  # For timestamps in logging
anyhow = "1.0.95" # For better error handling
crossbeam-channel = "0.5.14"

# For json stuff
log = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"

# For showcase functionality
webbrowser = "1.0.3" # For web browser usage
rmp-serde = "1.3.0" # For MessagePack serialization
flate2 = "1.0.35" # For Gzip compression
base64 = "0.22.1" # For Base64URL encoding

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.15.0"

# For testing
rand =  "0.9.0-beta.3"